<resources>
    <string name="app_name">StudentApp</string>
    <string name="welcome">Welcome back!</string>
    <string name="missed">You’ve been missed</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="sign_up"> Sign up</string>
    <string name="log_in">Login</string>
    <string name="remember">Remember me</string>
    <string name="forget_pass">Forgot password?</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="visit">Visit Done</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="photo">Photo</string>
    <string name="Upload_photo">Upload Photo</string>
    <string name="Confirm_password">Confirm Password</string>

    <string name="gender">Select Gender</string>
    <string name="group">Select Group</string>
    <string name="nameGroup">Group</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="forgot">Forgot password!</string>
    <string name="code_phone">We will send code to your phone</string>
    <string name="send">Send OTP</string>
    <string name="verification">Verification code</string>
    <string name="confirm">Confirm</string>F
    <string name="new_pass">New Password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="quiz_answer">Quiz Answer</string>
    <string name="answer">Answer</string>
    <string name="attendance">Attendance</string>
    <string name="quiz">Quiz</string>
    <string name="notification">Notification</string>
    <string name="review">Review Note</string>
    <string name="historyQuiz">Quizzes History</string>
    <string name="files">Files</string>
    <string name="more">More</string>
    <string name="receive_code">Didn’t receive code?</string>
    <string name="resend"> Resend</string>
    <string name="haveAn"> have an account? </string>
    <string name="please">Please don’t forget this one too</string>
    <string name="changed_pass">Your password changed sucsessfully </string>
    <string name="saved_pass">Your password saved sucsessfully </string>
    <string name="saved_data">Your data saved sucsessfully </string>
    <string name="edit_pass">Edit Password </string>
    <string name="choose">Choose your language</string>
    <string name="successfully_sent">Your answers have been sent successfully and your grade</string>
    <string name="arabic">العربيه</string>
    <string name="english">English</string>
    <string name="con">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Are you sure you are \n sending your answers?</string>

    <string name="title">Discounts on all stores</string>

    <string name="body">Lots of discount at different rates\n from all stores and brands All of this\n is available to us </string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="sucsessfully">Your Request send sucsessfully </string>
    <string name="sendRequest">Send request</string>
    <string name="QR">Please show your QR code</string>
    <string name="request">Request to change group</string>

    <string name="today_quiz">Today quizzes</string>
    <string name="latest_files">latest files</string>
    <string name="no_quiz">There is no quiz today</string>

    <string name="profile">Profile</string>
    <string name="changeLang">Change Language</string>
    <string name="terms">Terms and Conditions</string>
    <string name="terms_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.t labore et dolore magna.Lorem ipsum ..Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum ..</string>
    <string name="contact">Contact Us</string>
    <string name="find">Find us on social media</string>
    <string name="contact_number">Contact Number</string>
    <string name="logout">Log out</string>
    <string name="Privacy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>