<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectUserActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/alsafty_logo"/>

        <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:textSize="32dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_login_custom"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/student"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_login_custom"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

    </LinearLayout>

</RelativeLayout>