<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/addphoto"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="11dp"
                    android:layout_marginLeft="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Upload_photo"
                        android:textSize="14sp"
                        android:textColor="@color/orange"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mar_rig_lift"
            android:layout_marginEnd="@dimen/mar_rig_lift"
            app:boxCornerRadiusBottomEnd="18dp"
            app:boxCornerRadiusBottomStart="18dp"
            app:boxCornerRadiusTopEnd="18dp"
            app:boxCornerRadiusTopStart="18dp"
            android:layout_marginTop="@dimen/margin_top"
            app:boxStrokeColor="@color/yellow"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/name"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:inputType="text"
                />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mar_rig_lift"
            android:layout_marginEnd="@dimen/mar_rig_lift"
            app:boxCornerRadiusBottomEnd="18dp"
            app:boxCornerRadiusBottomStart="18dp"
            app:boxCornerRadiusTopEnd="18dp"
            app:boxCornerRadiusTopStart="18dp"
            android:layout_marginTop="@dimen/margin_top"
            app:boxStrokeColor="@color/yellow"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/email"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:inputType="text"
                />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mar_rig_lift"
            android:layout_marginEnd="@dimen/mar_rig_lift"
            app:boxCornerRadiusBottomEnd="18dp"
            app:boxCornerRadiusBottomStart="18dp"
            app:boxCornerRadiusTopEnd="18dp"
            app:boxCornerRadiusTopStart="18dp"
            android:layout_marginTop="@dimen/margin_top"
            app:boxStrokeColor="@color/yellow"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/phone"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:inputType="text"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@drawable/et_background_custom">

            <TextView
                android:id="@+id/txt_selectGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/drop_down_icon"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_password"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_pass"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_small"
                />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/btn_background_login_custom"
            android:layout_marginRight="@dimen/mar_rig_lift"
            android:layout_marginLeft="@dimen/mar_rig_lift"
            android:text="@string/save"
            android:layout_marginTop="@dimen/margin_top"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>


</RelativeLayout>